src/examples/should_fail/undefined_start.kiki
start Fo

struct Foo

terminal Token {
    $Num: isize
}
